<resources>
    <string name="app_name">HomeAccountant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="save">сохранить</string>
    <string name="l1">До 100 кВт(грн/кВт)</string>
    <string name="l2">Свыше 100 кВт(грн/кВт)</string>
    <string name="w">Вода(грн/м. куб.)</string>
    <string name="g">Газ(грн/м. куб.)</string>
    <string name="a">Квартплата(грн)</string>
    <string name="light_explanation">*- 1-до 100кВт, 2-свыше 100 кВт</string>
    <string name="grn">грн.</string>
    <string name="zero_price">0.0</string>
    <string name="title_activity_counts_list">CountsListActivity</string>
    <string name="title_activity_price_list">PriceListActivity</string>
    <string name="start_string">Ввести показатели</string>
    <string name="powered_by_shurik">Powered by Shurik</string>
    <string name="taxes">Тарифы</string>
    <string name="add">Ввести показатели</string>
    <string name="counts">Список показателей</string>
    <string name="accruals">Список начислений</string>
    <string name="title_activity_taxes">TaxesActivity</string>
    <string name="add_counts">Внесите показатели</string>
    <string name="your_counts">Показатели</string>
    <string name="your_accruals">Начисления</string>
    <string name="set_your_taxes">Тарифы</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="url_taxes">https://index.minfin.com.ua/tariff/</string>
    <string name="home_title">Актуальные тарифы</string>
    <string name="inet_check">Проверьте наличие Интернета!</string>
    <string name="gohome">Домой</string>
    <string name="added">Added</string>
    <string name="bottom_light">Свет</string>
    <string name="prevl">Предыдущие свет:</string>
    <string name="nowl">Текущие свет:</string>
    <string name="prevw">Предыдущие вода:</string>
    <string name="noww">Текущие вода:</string>
    <string name="prevg">Предыдущие газ:</string>
    <string name="nowg">Текущие газ:</string>
    <string name="enter_count">Введите показатель</string>
    <string name="no_data">Нет данных!</string>
    <string name="l_bundle">light</string>
    <string name="w_bundle">water</string>
    <string name="g_bundle">gas</string>
    <string name="enter_value">Введите значение</string>
    <string name="enter_tax_dialog">Введите тариф(-ы)</string>
    <string name="save_dialog">Сохранить</string>
    <string name="cancel_dialog">Отмена</string>
    <string name="success">Сохранено успешно</string>
    <string name="disaster">Ошибка: тарифы не сохранены!</string>
    <string name="key_light1">pref_light1</string>
    <string name="key_light2">pref_light2</string>
    <string name="key_water">pref_water</string>
    <string name="key_gas">pref_gas</string>
    <string name="key_apt">pref_apt</string>
    <string name="t_l">Свет</string>
    <string name="tax">Тариф</string>
    <string name="total_price">Стоимость</string>
    <string name="toast_wtf">Не удалось получить данные из базы</string>
    <string name="no_data_available">Добавьте показатели для отображения в списке</string>
    <string name="enter_all_pls">Введите все показатели!</string>
    <string name="saved">Сохранено!</string>
</resources>
