<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_start"
        android:icon="@drawable/ic_account_balance_black_24dp"
        android:title="@string/gohome"/>

    <item
        android:id="@+id/navigation_add"
        android:icon="@drawable/ic_add_black_36dp"
        android:title="@string/add"/>

    <item
        android:id="@+id/navigation_accruals"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/accruals"/>
    <item
        android:id="@+id/navigation_counts"
        android:icon="@drawable/ic_date_range_black_24dp"
        android:title="@string/counts"/>

    <item
        android:id="@+id/navigation_taxes"
        android:icon="@drawable/ic_border_color_black_24dp"
        android:title="@string/taxes"/>
</menu>