<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/prevlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevl"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/prev_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prevlight"/>

    <TextView
        android:id="@+id/nowlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nowl"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prev_light"/>

    <EditText android:id="@+id/now_light"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:hint="@string/enter_count"
        android:textColorHint="@color/green"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nowlight"/>

    <TextView
        android:id="@+id/prevwater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevw"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/now_light"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/prev_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prevwater"/>

    <TextView
        android:id="@+id/nowwater"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/noww"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prev_water"/>

    <EditText android:id="@+id/now_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionNext"
        android:hint="@string/enter_count"
        android:textColorHint="@color/green"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nowwater"/>

    <TextView
        android:id="@+id/prevgas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prevg"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/now_water"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/prev_gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prevgas"/>

    <TextView
        android:id="@+id/nowgas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nowg"
        android:textSize="16sp"
        android:textColor="@color/grey"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/prev_gas"/>

    <EditText android:id="@+id/now_gas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:imeOptions="actionDone"
        android:hint="@string/enter_count"
        android:textColorHint="@color/green"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textColor="@color/green"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nowgas"/>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        app:layout_constraintVertical_chainStyle="spread"/>


</android.support.constraint.ConstraintLayout>